--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,47 +6,59 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: laravel-API
+    image: laravel/hng-api
+    container_name: app
     restart: unless-stopped
     tty: true
     environment:
       SERVICE_NAME: app
       SERVICE_TAGS: dev
     working_dir: /var/www
+    volumes:
+      - ./:/var/www
+      - ./php/local.ini:/usr/local/etc/php/conf.d/local.ini
     networks:
       - app-network
 
   #Nginx Service
   webserver:
     image: nginx:alpine
+    container_name: webserver
     restart: unless-stopped
     tty: true
     ports:
       - "80:80"
       - "443:443"
+    volumes:
+      - ./:/var/www
+      - ./nginx/conf.d/:/etc/nginx/conf.d/
     networks:
       - app-network
 
   #MySQL Service
-  database:
+  db:
     image: mysql:5.7.22
+    container_name: db
     restart: unless-stopped
     tty: true
     ports:
       - "3306:3306"
     environment:
-      - "MYSQL_DATABASE = api"
-      - "MYSQL_USER = root"
-      - "MYSQL_PASSWORD="
-      - "MYSQL_ROOT_PASSWORD = "
+      MYSQL_DATABASE: api
+      MYSQL_ROOT_PASSWORD: 
       SERVICE_TAGS: dev
       SERVICE_NAME: mysql
+    volumes:
+      - dbdata:/var/lib/mysql/
+      - ./mysql/my.cnf:/etc/mysql/my.cnf
     networks:
       - app-network
-    volumes:
-      - dbdata:/var/lib/mysql
 
 #Docker Networks
 networks:
   app-network:
     driver: bridge
+#Volumes
+volumes:
+  dbdata:
+    driver: local
