--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,26 +30,28 @@ services:
   nginx:
     image: nginx:alpine
     container_name: nginx
+    restart: unless-stopped
+    tty: true
     ports:
-      - "8080:80"
+      - "80:80"
       - "443:443"
     volumes:
       - ./:/var/www
-      - ./nginx/conf.d/:/etc/nginx/conf.d/app.conf
+      - ./nginx/conf.d/:/etc/nginx/conf/
     networks:
       - app-network
 
   #MySQL Service
   db:
-    image: mysql:5.7.22
+    image: mysql:8.0.17
     container_name: db
     restart: unless-stopped
     tty: true
     ports:
-      - "3307:3307"
+      - "3308:3306"
     environment:
       MYSQL_DATABASE: api
-      MYSQL_ROOT_PASSWORD: 
+      MYSQL_ROOT_PASSWORD: hngi7
       SERVICE_TAGS: dev
       SERVICE_NAME: mysql
     volumes:
